samples/_failures_safe/1761419236_f94035_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cbea1b0.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_6cbea1b0.c:140:12: error: missing terminating " character
  140 |     printf("Current
      |            ^~~~~~~~
./samples/SAFE/__tmp_6cbea1b0.c:140:5: error: expected expression at end of input
  140 |     printf("Current
      |     ^~~~~~
./samples/SAFE/__tmp_6cbea1b0.c:140:5: error: expected declaration or statement at end of input
